<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hello2morrow</groupId>
	<artifactId>sonargraph-integration-access</artifactId>
	<version>6.1.3</version>
	<name>Sonargraph Integration</name>
	<description>Sonargraph Integration</description>
	<url>http://www.hello2morrow.com</url>
    <inceptionYear>2016</inceptionYear>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sonar.sources>src/main/java</sonar.sources>
		<java.version>1.8</java.version>
	</properties>
	<licenses>
		<license>
			<name>Apache License 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.7.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifestFile>META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jvnet.jaxb2.maven2</groupId>
				<artifactId>maven-jaxb2-plugin</artifactId>
				<version>0.14.0</version>
				<executions>
					<execution>
						<id>report</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<schemaIncludes>
								<include>com/hello2morrow/sonargraph/integration/access/persistence/report/report.xsd</include>
							</schemaIncludes>
							<generatePackage>com.hello2morrow.sonargraph.integration.access.persistence.report</generatePackage>
							<generateDirectory>${project.build.directory}/generated-sources/report</generateDirectory>
						</configuration>
					</execution>
					<execution>
						<id>architecture</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<schemaIncludes>
								<include>com/hello2morrow/sonargraph/integration/architecture/persistence/architecture.xsd</include>
							</schemaIncludes>
							<generatePackage>com.hello2morrow.sonargraph.integration.architecture.persistence</generatePackage>
							<generateDirectory>${project.build.directory}/generated-sources/architecture</generateDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<header>license.txt</header>
					<mapping>
						<java>SLASHSTAR_STYLE</java>
					</mapping>
					<includes>
						<include>src/main/java/**</include>
						<include>src/test/java/**</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.6</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<source>8</source>
					<additionalparam>-Xdoclint:none</additionalparam>
					<additionalJOption>-Xdoclint:none</additionalJOption>
					<excludePackageNames>com.hello2morrow.sonargraph.integration.access.persistence.report:com.hello2morrow.sonargraph.integration.architecture.persistence</excludePackageNames>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.0.1</version>
			</plugin>
			<!-- plugin> <groupId>org.jacoco</groupId> <artifactId>jacoco-maven-plugin</artifactId> 
				<version>0.7.5.201505241946</version> <executions> <execution> <id>default-prepare-agent</id> 
				<goals> <goal>prepare-agent</goal> </goals> </execution> <execution> <id>default-prepare-agent-integration</id> 
				<goals> <goal>prepare-agent-integration</goal> </goals> </execution> <execution> 
				<id>default-report</id> <goals> <goal>report</goal> </goals> </execution> 
				<execution> <id>default-report-integration</id> <goals> <goal>report-integration</goal> 
				</goals> </execution> <execution> <id>default-check</id> <goals> <goal>check</goal> 
				</goals> </execution> </executions> </plugin -->
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.28</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>

		<!-- Any application using this library must pick a JAXB implementation -->
		<!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.1</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.sun.istack/istack-commons-runtime -->
		<dependency>
			<groupId>com.sun.istack</groupId>
			<artifactId>istack-commons-runtime</artifactId>
			<version>3.0.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<organization>
		<name>hello2morrow GmbH</name>
		<url>https://www.hello2morrow.com</url>
	</organization>
	<scm>
		<connection>scm:git:https://github.com/sonargraph/sonargraph-integration-access.git</connection>
		<developerConnection>scm:git:https://github.com/sonargraph/sonargraph-integration-access.git</developerConnection>
		<url>https://github.com/sonargraph/sonargraph-integration-access</url>
	</scm>
	<developers>
		<developer>
			<id>andreashoyerh2m</id>
			<name>Andreas Hoyer</name>
		</developer>
		<developer>
			<id>dietmarmenges</id>
			<name>Dietmar Menges</name>
		</developer>
		<developer>
			<id>a-zitzewitz</id>
			<name>Alexander von Zitzewitz</name>
		</developer>
		<developer>
			<id>ingmarkellner</id>
			<name>Ingmar Kellner</name>
		</developer>
	</developers>
	<profiles>
		<profile>
			<id>signing</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>